--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/a-x-/form-validation-parser/issues"
   },
-  "homepage": "https://github.com/a-x-/form-validation-parser"
+  "homepage": "https://github.com/a-x-/form-validation-parser",
+  "dependencies": {
+    "lodash": "~2.4.1",
+    "pluck-deep": "~0.2.2"
+  }
 }
